fixed img location

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./output.css" />
-    <link rel="icon" type="image/x-icon" href="/webp/Logo.png" />
+    <link rel="icon" type="image/x-icon" href="./webp/Logo.png" />
     <title>Memory Game</title>
   </head>
   <body id="theme">
@@ -17,7 +17,7 @@
         class="absolute top-4 left-4 shadow-lg rounded-full dark:shadow-csSha dark:shadow-2xl"
       >
         <picture>
-          <img class="w-16 h-auto" src="/webp/Logo.png" alt="" />
+          <img class="w-16 h-auto" src="./webp/Logo.png" alt="" />
         </picture>
       </a>
       <div
@@ -51,7 +51,7 @@
         <picture>
           <img
             class="w-12 h-auto"
-            src="../webp/right.webp"
+            src="./webp/right.webp"
             alt="webp/right.png"
           />
         </picture>
